--- a/local/pressure-washing-hatfield.html
+++ b/local/pressure-washing-hatfield.html
@@ -139,7 +139,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p>Regular pressure washing not only improves appearance but also helps extend the life of your driveway. Slippery algae and moss can create safety hazards, especially during wet weather, and embedded dirt can weaken surfaces over time. Our Hatfield pressure washing specialists thoroughly clean joints, edges, and high-traffic areas, helping to protect your investment while instantly boosting kerb appeal.</p>
 <p>If your driveway looks tired or unsafe, our pressure washing service in Hatfield delivers fast, visible results you can rely on.</p>
 <p>
-<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html">
 title="Driveway pressure washing in Hatfield Doncaster">
 professional driveway pressure washing services in Hatfield Doncaster</P>
 <img src="/images/pressure-washing-driveway.webp"
