--- a/local/pressure-washing-hatfield.html
+++ b/local/pressure-washing-hatfield.html
@@ -141,7 +141,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p>
 <a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html">
 title="Driveway pressure washing in Hatfield Doncaster">
-professional driveway pressure washing services in Hatfield Doncaster</P>
+professional driveway pressure washing services in Hatfield Doncaster</a></P>
 <img src="/images/pressure-washing-driveway.webp"
 alt="Clean block paved driveway after professional pressure washing in Hatfield"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -159,8 +159,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Whether you’re preparing for summer or maintaining your home, our Hatfield pressure washing service helps your patio look its best all year round.</p>
 <a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
 title="Patio and paving  pressure cleaning in Hatfield Doncaster">
-professional patio pressure washing services Hatfield Doncaster">
-</a>FAQS</p>
+professional patio pressure washing services Hatfield Doncaster FAQS"</a></p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Bright stone patio fully cleaned with pressure washing in Hatfield garden"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
