--- a/local/pressure-washing-armthorpe.html
+++ b/local/pressure-washing-armthorpe.html
@@ -141,7 +141,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <P>
  <a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
 title="Driveway pressure washing in Armthorpe Doncaster">
-professional pressure washing services</p>
+professional pressure washing services<a/></p>
 <img src="/images/pressure-washing-driveway.webp"
 alt="Freshly cleaned driveway in Armthorpe after professional pressure washing removing moss and surface stains"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -160,7 +160,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>
  <a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
 title="Patio and paving  pressure cleaning in Armthorpe Doncaster">
-professional patio and paving pressure washing. FAQS</P>
+professional patio and paving pressure washing. FAQS"<a/></p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Clean stone patio in Armthorpe after pressure washing removing algae and weather stains"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
