--- a/local-guttering-service/askern.html
+++ b/local-guttering-service/askern.html
@@ -199,8 +199,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
 <img id="lightboxImg" src="" alt="">
 </div>
-<p></p>
-<img src="/images/pressure-washing-algae.webp"
+<img src="/images/gutter-dirty.webp"
 alt="Professional guttering service team in Askern completing cleaning, repairs, and replacement with pressure washing"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
