--- a/local/pressure-washing-stainforth.html
+++ b/local/pressure-washing-stainforth.html
@@ -1,1 +1,297 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title>Driveway Pressure Washing in Stainforth | Local Exterior Cleaning Experts</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-stainforth.html">
+<meta name="description" content="Professional driveway pressure washing in Stainforth. Restore kerb appeal, remove stains, and book a trusted local service today.">
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+h1 {
+font-size: 2em; /* adjusts size for readability */
+text-align: center;
+margin-bottom: 20px;
+} 
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+ /* LIGHTBOX STYLING */
+.lightbox {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
+justify-content: center; /* Center the image horizontally */
+align-items: center; /* Center the image vertically */
+z-index: 9999; /* On top of everything */
+cursor: pointer; /* Click to close */
+flex-direction: column; /* For image + close button vertically */
+}
+
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+.header-buttons {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
+</style>
+ 
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get Instant Quote</a>
+</header>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h1>Driveway Pressure Washing in Stainforth</h1>
+<h2>Restore Your Driveway’s Look and Improve Kerb Appeal</h2>
+<p>Driveway pressure washing in Stainforth is one of the most effective ways to instantly improve the appearance of your home. Over time, driveways collect dirt, algae, oil stains, and tyre marks that regular cleaning simply can’t remove. Our professional pressure washing service uses specialist equipment to lift deep-set grime without damaging block paving, concrete, or tarmac surfaces. Homeowners across Stainforth trust our process because it delivers visible results quickly and safely. A clean driveway doesn’t just look better — it also reduces slippery surfaces and helps protect the long-term condition of your paving. Whether your driveway is used daily or only occasionally, pressure washing restores a clean, welcoming finish that makes a strong first impression.</p>
+<p>We tailor every driveway pressure washing job in Stainforth to suit the surface type and level of soiling. This careful approach ensures effective cleaning while preventing erosion or joint damage. From residential homes to shared driveways, our service removes moss, weeds, and ground-in dirt that dulls the surface over time. Many customers are surprised at how much brighter their driveway looks after a single visit. Regular pressure washing also helps prevent future staining by keeping pores clear and surfaces well maintained. It’s a simple upgrade that adds real value to your property.</p>
+<p>If your driveway looks tired or slippery, our Stainforth pressure washing service delivers fast, reliable results. Book today to refresh your driveway and boost your home’s kerb appeal.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Stainforth Doncaster">
+professional driveway pressure washing services in Stainforth Doncaster FAQS"></a></p>
+<img src="/images/pressure-washing-driveway.webp"
+alt="driveway-pressure-washing-stainforth.jpg" alt="Freshly cleaned driveway after professional pressure washing in Stainforth"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 2 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Patio Pressure Washing in Stainforth</h2>
+<h3>Bring Your Outdoor Space Back to Life</h3>
+<p>Patio pressure washing in Stainforth transforms outdoor areas that have become dull, slippery, or discoloured. Patios naturally collect algae, moss, and dirt due to constant exposure to weather and foot traffic. Our professional pressure washing service safely removes these build-ups, revealing the original colour and texture of your paving. Whether your patio is stone, concrete, or paving slabs, we adjust pressure levels to ensure thorough cleaning without surface damage. A freshly washed patio makes your garden more enjoyable and safer to use, especially during warmer months. Many Stainforth homeowners choose pressure washing before hosting guests or starting summer projects, as it instantly improves the look and feel of their outdoor space.</p>
+<p>Our patio pressure washing service in Stainforth focuses on both appearance and longevity. Removing organic growth helps prevent long-term staining and surface breakdown. We clean joints, edges, and hard-to-reach areas to ensure a consistent finish across the entire patio. Customers often notice that furniture looks better, plants stand out more, and the whole garden feels brighter. Regular pressure washing also reduces maintenance needs, keeping your patio cleaner for longer with less effort.</p>
+<p>Refresh your patio with trusted pressure washing in Stainforth. One visit can completely transform your outdoor space and make it ready to enjoy again.</p>
+
+<p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
+title="Patio and paving  pressure cleaning in Stainforth Doncaster">
+professional patio pressure washing services Stainforth Doncaster FAQS"</a></p>
+<img src="/images/pressure-washing-patios.webp"
+alt="Clean patio surface after professional pressure washing service in Stainforth garden"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 3 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>House &amp; Garden Wall Pressure Washing in Stainforth</h2>
+<h3>Protect and Refresh Your Exterior Walls</h3>
+<p>House and garden wall pressure washing in Stainforth is an effective way to remove years of dirt, algae, and pollution staining. Exterior walls are constantly exposed to moisture and airborne grime, which can leave surfaces looking tired and neglected. Our professional pressure washing service gently cleans brick, render, and stone walls without compromising their structure. This process restores colour, improves overall appearance, and helps protect your property from long-term damage caused by organic growth. Clean walls also improve natural light reflection, making your home look brighter and better maintained. Many Stainforth homeowners choose wall pressure washing as part of regular exterior care or before selling their property to enhance visual appeal.</p>
+<p>We assess each surface carefully before starting, ensuring the correct pressure and technique are used. This tailored approach allows us to safely clean garden walls, boundary walls, and house exteriors while preserving mortar and finishes. Pressure washing keeps walls cleaner for longer and reduces future maintenance costs.</p>
+<p>Our Stainforth pressure washing service restores walls quickly and safely, delivering visible improvements that last.</p>
+<img src="/images/pressure-washing-walls.webp"
+alt="House and garden walls cleaned with professional pressure washing in Stainforth"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 4 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Decking &amp; Fence Pressure Washing in Stainforth</h2>
+<h3>Revive Timber Surfaces and Extend Their Lifespan</h3>
+<p>Decking and fence pressure washing in Stainforth removes algae, dirt, and weather staining that can damage timber over time. Wooden surfaces quickly become slippery and discoloured without proper care. Our pressure washing service restores natural tones while helping prevent rot and surface breakdown. We use controlled pressure levels suitable for wood, ensuring effective cleaning without splintering or damage. Clean decking improves safety and appearance, making your garden more enjoyable throughout the year. Fences also benefit from pressure washing, as it removes green growth and prepares surfaces for staining or treatment if needed.</p>
+<p>Stainforth homeowners often choose pressure washing before summer or seasonal maintenance. A clean deck and fence instantly lift the look of your entire garden. Regular washing also helps timber treatments absorb more effectively, extending their lifespan. We clean evenly across boards and panels, delivering consistent results with minimal disruption.</p>
+<p>Our decking and fence pressure washing in Stainforth delivers safer surfaces, cleaner finishes, and longer-lasting timber. Book today to refresh your garden features.</p>
+<img src="/images/pressure-wash-decking.webp"
+alt="Timber decking and fencing restored with pressure washing in Stainforth garden"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 5 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Trusted Pressure Washing Services in Stainforth</h2>
+<h3>Local, Reliable, and Results-Driven Exterior Cleaning</h3>
+<p>If you’re looking for reliable pressure washing in Stainforth, we’re here to help. From driveways and patios to walls, decking, and fencing, our professional service delivers visible results you can trust. We focus on quality workmanship, safe cleaning methods, and friendly local service. Every job is tailored to your property, ensuring the best possible outcome without unnecessary risk. Whether you need a one-off clean or regular maintenance, our pressure washing services help protect and enhance your home. Contact us today to book your Stainforth pressure washing service and see the difference a professional clean can make.</p>
+<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
+<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
+<img id="lightboxImg" src="" alt="">
+</div>
+<img src="/images/pressure-washing-algae.webp"
+alt="Professional pressure washing services completed at a residential property in Stainforth"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+
+</footer>
+ 
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
+"url": "https://homerepairs4u.com/local/pressure-washing-stainforth.html",
+"telephone": "+44-07735-873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.5945,
+"longitude": -0.9016
+},
+"areaServed": "Stainforth",
+"openingHoursSpecification": [
+{
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
+"opens": "00:00",
+"closes": "23:59"
+}
+],
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+]
+}
+</script>
+
+<!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = document.getElementById("lightboxImg");
+
+lightbox.style.display = "flex"; // show lightbox
+lightboxImg.src = src; // set the image
+lightboxImg.alt = alt; // ✅ set alt dynamically
+}
+
+function closeLightbox(){
+document.getElementById("lightbox").style.display = "none";
+}
+
+// Optional: close lightbox with Esc key
+document.addEventListener('keydown', function(event) {
+const lightbox = document.getElementById('lightbox');
+if (event.key === "Escape" && lightbox.style.display === "flex") {
+lightbox.style.display = "none";
+}
+});
+</script>
+
+</body>
+</html>
