--- a/local/pressure-washing-dunscroft.html
+++ b/local/pressure-washing-dunscroft.html
@@ -141,7 +141,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
  <P>
 <a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
 title="Driveway pressure washing in Dunscroft Doncaster">
-professional driveway pressure washing services in Dunscroft Doncaster FAQS"></a></p>
+professional driveway pressure washing services in Dunscroft Doncaster FAQS</a></p>
 <img src="/images/pressure-washing-driveway.webp"
 alt="Cleaned Dunscroft driveway after professional pressure washing, showing restored paving and no moss or stains"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -160,7 +160,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>
 <a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
 title="Patio and paving  pressure cleaning in Dunscroft Doncaster">
-professional patio pressure washing services Dunscroft Doncaster FAQS"</a></p>
+professional patio pressure washing services Dunscroft Doncaster FAQS</a></p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Cleaned Dunscroft patio after pressure washing, showing restored stone surfaces and moss-free areas"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
